[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Icons/minus_inverted.png" type="Texture" id=1]
[ext_resource path="res://UI/Components/FlatTextureButton.gd" type="Script" id=2]
[ext_resource path="res://UI/Dialogs/AxisOffsetRow.gd" type="Script" id=3]

[node name="Axis Offset Row" type="VBoxContainer"]
margin_right = 496.0
margin_bottom = 21.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="."]
margin_right = 516.0
margin_bottom = 24.0

[node name="DeleteButton" type="TextureButton" parent="HBox"]
modulate = Color( 1, 0.6, 0.6, 0.627451 )
margin_right = 18.0
margin_bottom = 24.0
hint_tooltip = "Delete nozzle"
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )
hover_tint = Color( 1, 0.521569, 0.521569, 1 )
pressed_tint = Color( 1, 0, 0, 1 )

[node name="Container" type="Container" parent="HBox"]
margin_left = 22.0
margin_right = 74.0
margin_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="HBox"]
margin_left = 78.0
margin_top = 5.0
margin_right = 105.0
margin_bottom = 19.0
text = "Axis"

[node name="AxisLineEdit" type="LineEdit" parent="HBox"]
margin_left = 109.0
margin_right = 167.0
margin_bottom = 24.0
hint_tooltip = "Vertical axis the nozzle uses."
placeholder_text = "eg. Z"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="HBox"]
margin_left = 171.0
margin_top = 5.0
margin_right = 224.0
margin_bottom = 19.0
text = "Extruder"

[node name="ExtruderLineEdit" type="LineEdit" parent="HBox"]
margin_left = 228.0
margin_right = 286.0
margin_bottom = 24.0
hint_tooltip = "Extruder axis the nozzle uses"
placeholder_text = "eg. B"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="HBox"]
margin_left = 290.0
margin_right = 294.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="HBox"]
margin_left = 298.0
margin_top = 5.0
margin_right = 337.0
margin_bottom = 19.0
text = "Offset"
align = 2

[node name="Label" type="Label" parent="HBox"]
margin_left = 341.0
margin_top = 5.0
margin_right = 349.0
margin_bottom = 19.0
text = "X"

[node name="OffsetX" type="SpinBox" parent="HBox"]
margin_left = 353.0
margin_right = 427.0
margin_bottom = 24.0
hint_tooltip = "Offset X from the origin"
max_value = 1000.0
step = 0.01
allow_greater = true
align = 1

[node name="Label2" type="Label" parent="HBox"]
margin_left = 431.0
margin_top = 5.0
margin_right = 438.0
margin_bottom = 19.0
text = "Y"

[node name="OffsetY" type="SpinBox" parent="HBox"]
margin_left = 442.0
margin_right = 516.0
margin_bottom = 24.0
hint_tooltip = "Offset Y from the origin"
max_value = 1000.0
step = 0.01
allow_greater = true
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 28.0
margin_right = 516.0
margin_bottom = 52.0

[node name="Container2" type="Container" parent="HBoxContainer"]
margin_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="HBoxContainer"]
margin_left = 4.0
margin_top = 5.0
margin_right = 48.0
margin_bottom = 19.0
hint_tooltip = "Diameter of nozzle, or diameter with equivalent
cross-sectional area as nozzle"
mouse_filter = 1
text = "Nozzle"

[node name="DiamNozzle" type="SpinBox" parent="HBoxContainer"]
margin_left = 52.0
margin_right = 126.0
margin_bottom = 24.0
hint_tooltip = "Diameter of nozzle"
min_value = 0.01
max_value = 10.0
step = 0.01
value = 0.25
allow_greater = true
align = 1

[node name="Label5" type="Label" parent="HBoxContainer"]
margin_left = 130.0
margin_top = 5.0
margin_right = 168.0
margin_bottom = 19.0
hint_tooltip = "Diameter with equivalent cross-sectional area
as syringe, or barrel of extruder"
mouse_filter = 1
text = "Barrel"

[node name="DiamBarrel" type="SpinBox" parent="HBoxContainer"]
margin_left = 172.0
margin_right = 246.0
margin_bottom = 24.0
hint_tooltip = "Diameter of barrel"
min_value = 0.01
max_value = 10.0
step = 0.01
value = 4.6
allow_greater = true
align = 1

[node name="Label8" type="Label" parent="HBoxContainer"]
margin_left = 250.0
margin_top = 5.0
margin_right = 282.0
margin_bottom = 19.0
hint_tooltip = "Extruder Coefficient.

Default factor times exact extrusion volume.

Use more than 1 to account for sagging."
mouse_filter = 1
text = "Coeff"

[node name="Coeff" type="SpinBox" parent="HBoxContainer"]
margin_left = 286.0
margin_right = 360.0
margin_bottom = 24.0
hint_tooltip = "Default factor times exact extrusion volume.

Use more than 1 to account for sagging."
min_value = 0.01
max_value = 10.0
step = 0.01
value = 1.5
allow_greater = true
align = 1

[node name="Label6" type="Label" parent="HBoxContainer"]
margin_left = 364.0
margin_top = 5.0
margin_right = 438.0
margin_bottom = 19.0
text = "Pre-Extrude"

[node name="Preextrusion" type="SpinBox" parent="HBoxContainer"]
margin_left = 442.0
margin_right = 516.0
margin_bottom = 24.0
hint_tooltip = "Amount to pre-extrude at start of print."
max_value = 5.0
step = 0.01
value = 0.2
allow_greater = true
align = 1

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 56.0
margin_right = 516.0
margin_bottom = 60.0

[connection signal="pressed" from="HBox/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="text_changed" from="HBox/AxisLineEdit" to="." method="_on_AxisLineEdit_text_changed"]
[connection signal="text_changed" from="HBox/ExtruderLineEdit" to="." method="_on_ExtruderLineEdit_text_changed"]
[connection signal="value_changed" from="HBox/OffsetX" to="." method="_on_OffsetX_value_changed"]
[connection signal="value_changed" from="HBox/OffsetY" to="." method="_on_OffsetY_value_changed"]
